# simulated_filesystem

./: AbstractCommand.h  AbstractFile.h  AbstractFileFactory.h  AbstractFileSystem.h  AbstractFileVisitor.h  BasicDisplayVisitor.cpp  BasicDisplayVisitor.h  CMakeLists.txt  CommandPrompt.cpp  CommandPrompt.h  CommandTest.cpp  CommandTest.h  ImageFile.cpp  ImageFile.h  Makefile  MetadataDisplayVisitor.cpp  MetadataDisplayVisitor.h  PasswordProxy.cpp  PasswordProxy.h  README.md  SimpleFileFactory.cpp  SimpleFileFactory.h  SimpleFileSystem.cpp  SimpleFileSystem.h  TextFile.cpp  TextFile.h  TouchCommand.cpp  TouchCommand.h  catch.h  filesystem  main.cpp
SharedCode/: AbstractCommand.h  AbstractFileFactory.h  AbstractFileSystem.h  AbstractFileVisitor.h  AbstractParsingStrategy.h  BasicDisplayVisitor.cpp  BasicDisplayVisitor.h  CatCommand.cpp  CatCommand.h  CommandPrompt.h  CopyCommand.cpp  CopyCommand.h  DisplayCommand.cpp  DisplayCommand.h  ImageFile.cpp  ImageFile.h  LSCommand.cpp  LSCommand.h  MacroCommand.cpp  MacroCommand.h  MetadataDisplayVisitor.cpp  MetadataDisplayVisitor.h  PasswordProxy.cpp  PasswordProxy.h  RemoveCommand.cpp  RemoveCommand.h  RenameParsingStrategy.cpp  RenameParsingStrategy.h  SimpleFileFactory.cpp  SimpleFileFactory.h  SimpleFileSystem.cpp  SimpleFileSystem.h  Studio16.cpp
